@@ -1,11 +1,10 @@
 # Copyright 1999-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/games-misc/openmsx/openmsx-0.3.1-r1.ebuild,v 1.1 2015/01/02 07:06:10 mr_bones_ Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-misc/openmsx/openmsx-0.3.1-r1.ebuild,v 1.2 2015/01/02 09:20:18 patrick Exp $
 
 EAPI=5
 PYTHON_COMPAT=( python2_7 )
 inherit python-any-r1 games
-
 
 DESCRIPTION="An ambiguously named music replacement set for OpenTTD"
 HOMEPAGE="http://bundles.openttdcoop.org/openmsx/"
