@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 AUX make-tarball.sh 1364 SHA256 71c361f721bd4a87e2e15a6944243706ba300fc22544386891423344e37632f6 SHA512 89b0ebfe6f5a82c3e3fc678ec4599d7281a0978c3a53437f0fbcfcb33607f8087bca1263d8a52c5b25cb1ab91a6635385cf423213464af858fc2f9663d5446a7 WHIRLPOOL f048c27757c418227649062023ec971fa2a684d4cda88a26af212531da47021d71962296e7d9031de62f5416a3be78b1b3ccc6ad32b56e55847c09c2000f3577
 AUX netpbm-10.31-build.patch 1629 SHA256 eaf363941337718390856c318c8e69114c8fb9dbcea8b07755350dbdabce6323 SHA512 53e88bd1c85aa04d60ca2de7a32e5d00d9f959f3443e0c951c0694c814f6956708d8d12427a0fa8a8f76a1613d2982c3aa9b0c6ddd12b9cad3419ced1e5bb59e WHIRLPOOL 15a6b682813bfac808ccff8e16be492fd78defd59f82d5960d9a344452d8c761ea64ebbdc460c005c7d7669a3f26aa3704850487b43f4732bccb742b15709c28
 AUX netpbm-10.51.00-pnmconvol-nooffset.patch 3930 SHA256 d9c7f70e58d50dac4998157021ac2fef92822d1abd9b9d060384b195e4f1cabb SHA512 9f9a1e9a2d7db117693648693c0152082cab1e60a075e9bd4ca67b9c042ea02549917504658d32311b116cd17901f153ece73303adabdac2cd0981ac22a1ce45 WHIRLPOOL c7a6b09c9c5e258445473d7f16e91fac9205d1f21f24e8eebe0a277908774e6670d00ee3f6aa44f6bfc6bccface76c5db6bc523f442c263306982d43cb83edb3
@@ -13,6 +16,23 @@ DIST netpbm-10.51.00-libpng-1.5.patch.bz2 8120 SHA256 260a5f0e9834e7e1aa5c2dcc29
 DIST netpbm-10.51.00.tar.xz 1834148 SHA256 6d7bb30d1d0e7f6a23b55c6f03bbb20b539909ad84281dc944b1072656dc1d0e SHA512 07b621bfebbd051a80eff09886bc2b3b4f82b01fa9087d6a76ed70a042493b69fb3295d471640a4576101ba19352a57eadf69c5721d9cc416d25ff563ee07c76 WHIRLPOOL 25cbfbdd575fe1c032ce1bb700181175b1386d481990e516ce62d953b1d37091c32ca2016c487d4963af1b8c79ec04953e59181334d2a53b9d5701acedabdf2a
 DIST netpbm-10.66.00.tar.xz 2575356 SHA256 7fe94f38e139be194e9e384e8d9c9747f2fe08c18295bba93c55a41c5bbf63fc SHA512 44348eb1155353d5cd5a2ce025bc6d9301cc3239acea6b68418c14432f4bd61fc5a8669bb51b3e86b96abaf5b02cc20115c662e40fa5b41aee202b0c2ae605af WHIRLPOOL fa937fccd2da9068a268d6a5729c8093baacc3025ab2382902611dadab985247fdacf3433f6e15407b081478b93b772237c41363f37340ea6c93c169357dd0cf
 EBUILD netpbm-10.51.00-r2.ebuild 4876 SHA256 64ba1ded0af46f473325f4331d9c2f0bd4a01b01d2a9b13cfbd10100f6716cf1 SHA512 8a8a70195e352b5c975a74f060c6d412c781f4162aa00746c71e803bbb95c95c0487d1394b72099b52fd5b03cabb3fc13726b283905aad20028372d0f3e08537 WHIRLPOOL ad468b638a5d9ba18bf753a7cd69d1cacced523ec1ae0bece3f040f388cc1681ce40bfdb2f1109b8d5f6585eeb72a475685d78084891d8a56dd6da02ed829ba0
-EBUILD netpbm-10.66.00.ebuild 5496 SHA256 0330df2daa55e2b611e65b9eb9c8de9a866811d065aaca0b7638e4ac790fe185 SHA512 5f9226c64ff7dc52198a0f72ddb320127a2aee821a25a34aa5d0ddf7196031f1675184c71e72d1e420aed6aec382b201fdd56cd0681c3faeced030e95a39751e WHIRLPOOL 96ffa133cafa6379ea89bcfdafe391eff34b1be4058cbde459d39174a4eca1b63c6caa8fbb203d1f39b7019e8b1947f42a4940de1f281e7a996767657f21fb19
-MISC ChangeLog 39112 SHA256 4667e9974891d9a27940a64e03d5177dc85a25b8bfeea90384ae35c1f4ed7fd3 SHA512 9bb2c4c2be4072c54524b784327477c729e6ee9947e326c435444c5159c4736c0fa83d4843a3c7dd9c5b723154a8c3fd24850a0b5ab6a77a631546dd042085f1 WHIRLPOOL e38354536a0015443852280c066bade33b6152715d101f287663e9fdf1376499d002bfee47335f04a3846136fe9769caadf64fb9fcd289a8a02ccb3dcbeb0ae8
+EBUILD netpbm-10.66.00.ebuild 5511 SHA256 82894ee587a2001cab55c63a6c28fb9d3ec5eb966f27f7f494f6e8faf7894026 SHA512 674e091e9c36e3abfb2a2005c0b52d293a911f97346a8d222f7d6449274e46812306682cef03e7e25aa13460270c1e7c9ba27aaccda67299651b3c2bf61280a0 WHIRLPOOL 3fd6ced6f887cf680f2b6e1b0506689973b65447694abe939f504a0b0166f2f2f8f11877233f3960618973f59f1c3a2764503484a93d4d57ea6ce1dfe118b46e
+MISC ChangeLog 39250 SHA256 4d86d736b6c82e65c45125d5bffb0de76db214607e58e2e1c687a4e69ce59e3b SHA512 97f867348d8568968104661536bfecf90962508b59091235c0ac757dd25e9c050a2b1142844048743c74c99722638f6d89e4d5e6b27aff513915f25f2353d5a9 WHIRLPOOL 4a520a637de182282c02bbe805bbda427052c864ece040d21f303e11e547d90f4c4a6d022e815662196db2b272f05bdd92f17d3b28989ea3a9883bc4410ac147
 MISC metadata.xml 261 SHA256 e04079912e263782a8c0e4f115e49ff3694535ff2efef7b7fff85cf8d100102b SHA512 e7bcb8f689bd7da37e414a3f33b125d52a5ec0d376e821edd58d352ffb502098fbe8b7d24c0eb073822e41a55c280f84558ca4314dd37ac20adcf6471bd712af WHIRLPOOL 9aa2223d48bacfa917affeb56dc180becb54fc612e69ce6d26496d45cc42fd1050e2a40c77957ee7f37b3e2665adc0c95f08b60fab1787d3292905f0a4c8092a
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2
+
+iQIcBAEBCAAGBQJUpmEpAAoJEPGu1DbS6WIAQM4P/3L/CXzf7benRHDR8Ny1a5X0
+m9/rzTCmG8HWEHaQvRKIKtgpkLKhjwIhEGNm4Q4Tnd4IkLnb8rkGpFO8mAgH2FGG
+vFFgZEKc2iqb3sRokKAQAMvmqLWOkm2pRc7f1LKHXrj8DoKhoDHmHk6SLu9PZJ3F
+v6dIvk9phBABe/GY6qq3DT+0Isr2XZfdmiyYUH6MYzHaDnkkqvriL5J9FcxrVZik
+h5Ta/PmuRIuREyTAMrWNIFUxuYUVkDJjvuEOgNPYb3e8xwTXZMNi4P/rS/Fp0QlY
+K3JWjTG2iVjnjLUc64lIPTE23ZtKbVpuvRhDbQjZnGzZrq8qRM4JBDOoOyJ7+5Cx
+Y9Fp6jVkG7o5o4N+2ECZUzw9GllE8lQGW81W6a0behk9ZB2FHCt/xN07c7j2fEfF
+NLETNna+ACtwtoB+8EOEY+c0eJqqWk0R5EMBfdu52yrh+UMSs5xvXzstcEXGB7ih
+2nXHs3LlLyiaFBlxDMJSVwYcX0HBsyaadim5Zzadp1CsqmdmQ7AYVyhQB1pSel29
+9AQNcIKuMrq7H0pKtAiCAl/PuOQ3Hb1QazQ2CemR+bGekPPSNWtn+ume6toIgtom
+KkdBZJlkm7jWxNJcGAL8NKjsfz9exzOmZYpLgQQRcKlbAexyz+MPbc9DNudUUAJS
+afsUEQnkPvNZunI6Gt4C
+=GkKa
+-----END PGP SIGNATURE-----
