@@ -1,6 +1,9 @@
 # ChangeLog for games-misc/openmsx
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-misc/openmsx/ChangeLog,v 1.11 2015/01/02 07:06:10 mr_bones_ Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-misc/openmsx/ChangeLog,v 1.12 2015/01/02 09:20:18 patrick Exp $
+
+  02 Jan 2015; Patrick Lauer <patrick@gentoo.org> openmsx-0.3.1-r1.ebuild:
+  Remove useless blank line
 
 *openmsx-0.3.1-r1 (02 Jan 2015)
 
